node/orchestra/tests/ui/err-05-missing-field.stderr
error[E0599]: no method named `build` found for struct `OrchestraBuilder<Init<DummySpawner>, Init<AwesomeSubSys>, Missing<f64>>` in the current scope
  --> tests/ui/err-05-missing-field.rs:59:4
   |
22 | #[orchestra(signal=SigSigSig, error=OrchestraError, event=Event, gen=AllMessages)]
   | ---------------------------------------------------------------------------------- method `build` not found for this struct
...
59 |         .build()
   |          ^^^^^ method not found in `OrchestraBuilder<Init<DummySpawner>, Init<AwesomeSubSys>, Missing<f64>>`
   |
   = note: the method was found for
           - `OrchestraBuilder<Init<S>, Init<AwesomeSubSys>, Init<f64>>`
